<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="1dp"
    android:layout_marginTop="3dp"
    android:layout_marginRight="1dp"
    android:orientation="horizontal"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distanceButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_pill_button"
            android:drawableLeft="@drawable/ic_empty"
            android:gravity="center_vertical"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/durationButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_pill_button"
            android:drawableLeft="@drawable/ic_empty"
            android:gravity="center_vertical"
            android:text="@string/run_time" />

        <TextView
            android:id="@+id/paceButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_pill_button"
            android:drawableLeft="@drawable/ic_empty"
            android:gravity="center_vertical"
            android:text="@string/pace" />

        <TextView
            android:id="@+id/speedButton"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_pill_button"
            android:drawableLeft="@drawable/ic_empty"
            android:gravity="center_vertical"
            android:text="@string/speed" />
    </LinearLayout>
</HorizontalScrollView>